--- a/DirectX12CG/DirectX12CG.vcxproj.filters
+++ b/DirectX12CG/DirectX12CG.vcxproj.filters
@@ -115,6 +115,9 @@
     <Filter Include="リソース ファイル\ParticleShader\VertexShader">
       <UniqueIdentifier>{47a71b20-3487-4592-bf1c-9fbd3d7a5592}</UniqueIdentifier>
     </Filter>
+    <Filter Include="リソース ファイル\SpriteShader">
+      <UniqueIdentifier>{e3e36a56-89e5-4d0e-ba24-74e15967b994}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -227,6 +230,12 @@
     <FxCompile Include="Resources\Shaders\OBJShader\OBJVertexShader.hlsl">
       <Filter>リソース ファイル\BasicShader\VertexShader</Filter>
     </FxCompile>
+    <FxCompile Include="Resources\Shaders\SpriteShader\SpritePixelShader.hlsl">
+      <Filter>リソース ファイル\SpriteShader</Filter>
+    </FxCompile>
+    <FxCompile Include="Resources\Shaders\SpriteShader\SpriteVertexShader.hlsl">
+      <Filter>リソース ファイル\SpriteShader</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DxWindow.h">
@@ -323,6 +332,9 @@
     </None>
     <None Include="Resources\Shaders\OBJShader\OBJHeader.hlsli">
       <Filter>リソース ファイル\BasicShader\ShaderHeader</Filter>
+    </None>
+    <None Include="Resources\Shaders\SpriteShader\SpriteShaderHeader.hlsli">
+      <Filter>リソース ファイル\SpriteShader</Filter>
     </None>
   </ItemGroup>
 </Project>
