--- a/DirectX12CG/DirectX12CG.vcxproj
+++ b/DirectX12CG/DirectX12CG.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="Dx12.cpp" />
     <ClCompile Include="DxWindow.cpp" />
     <ClCompile Include="Human.cpp" />
+    <ClCompile Include="IScene.cpp" />
     <ClCompile Include="MCBFloat.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
@@ -44,6 +45,7 @@
     <ClCompile Include="RayObject.cpp" />
     <ClCompile Include="RootParameter.cpp" />
     <ClCompile Include="RootSignature.cpp" />
+    <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Sound.cpp" />
     <ClCompile Include="SphereObj.cpp" />
@@ -142,6 +144,7 @@
     <ClInclude Include="Dx12.h" />
     <ClInclude Include="DxWindow.h" />
     <ClInclude Include="Human.h" />
+    <ClInclude Include="IScene.h" />
     <ClInclude Include="MCBFloat.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="MCBMatrix.h" />
@@ -158,6 +161,7 @@
     <ClInclude Include="RayObject.h" />
     <ClInclude Include="RootParameter.h" />
     <ClInclude Include="RootSignature.h" />
+    <ClInclude Include="Scene.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Sound.h" />
     <ClInclude Include="SphereObj.h" />
