--- a/DirectX12CG/DirectX12CG.vcxproj.filters
+++ b/DirectX12CG/DirectX12CG.vcxproj.filters
@@ -13,21 +13,6 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="リソース ファイル\BasicShader">
-      <UniqueIdentifier>{6c143c2c-1c7c-48b7-b975-2a3e196d6cdd}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="リソース ファイル\BasicShader\PixelShader">
-      <UniqueIdentifier>{060f4353-5dfb-44c4-b1e2-b96183f34f77}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="リソース ファイル\BasicShader\GeometoryShader">
-      <UniqueIdentifier>{eb50deca-a9aa-4027-b35c-5ce823a5136c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="リソース ファイル\BasicShader\VertexShader">
-      <UniqueIdentifier>{de84811d-e66c-4849-a6ff-bca3be5f796f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="リソース ファイル\BasicShader\ShaderHeader">
-      <UniqueIdentifier>{221cc362-ce73-4b12-b724-3af9f026f791}</UniqueIdentifier>
-    </Filter>
     <Filter Include="リソース ファイル\ParticleShader">
       <UniqueIdentifier>{e72dba48-f07e-4874-b269-9cef8007657c}</UniqueIdentifier>
     </Filter>
@@ -135,6 +120,27 @@
     </Filter>
     <Filter Include="ヘッダー ファイル\Scene">
       <UniqueIdentifier>{9626c07b-d810-4c3a-a52f-1f3eb218727d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Engin\Light">
+      <UniqueIdentifier>{5971f4fb-497d-4141-9618-22794fb80932}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\Engin\Light">
+      <UniqueIdentifier>{2c8a91e2-59a7-4813-ba8a-ee7c5fd55405}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="リソース ファイル\BasicShader">
+      <UniqueIdentifier>{6c143c2c-1c7c-48b7-b975-2a3e196d6cdd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="リソース ファイル\BasicShader\PixelShader">
+      <UniqueIdentifier>{060f4353-5dfb-44c4-b1e2-b96183f34f77}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="リソース ファイル\BasicShader\GeometoryShader">
+      <UniqueIdentifier>{eb50deca-a9aa-4027-b35c-5ce823a5136c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="リソース ファイル\BasicShader\VertexShader">
+      <UniqueIdentifier>{de84811d-e66c-4849-a6ff-bca3be5f796f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="リソース ファイル\BasicShader\ShaderHeader">
+      <UniqueIdentifier>{221cc362-ce73-4b12-b724-3af9f026f791}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -261,14 +267,17 @@
     <ClCompile Include="Scene.cpp">
       <Filter>ソース ファイル\Scene</Filter>
     </ClCompile>
-    <ClCompile Include="Light.cpp">
-      <Filter>ソース ファイル\Engin\3D</Filter>
-    </ClCompile>
     <ClCompile Include="PointLight.cpp">
-      <Filter>ソース ファイル\Engin\3D</Filter>
+      <Filter>ソース ファイル\Engin\Light</Filter>
+    </ClCompile>
+    <ClCompile Include="Light.cpp">
+      <Filter>ソース ファイル\Engin\Light</Filter>
     </ClCompile>
     <ClCompile Include="LightGroup.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース ファイル\Engin\Light</Filter>
+    </ClCompile>
+    <ClCompile Include="SpotLight.cpp">
+      <Filter>ソース ファイル\Engin\Light</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -418,14 +427,17 @@
     <ClInclude Include="Scene.h">
       <Filter>ヘッダー ファイル\Scene</Filter>
     </ClInclude>
+    <ClInclude Include="LightGroup.h">
+      <Filter>ヘッダー ファイル\Engin\Light</Filter>
+    </ClInclude>
     <ClInclude Include="Light.h">
-      <Filter>ヘッダー ファイル\Engin\3D</Filter>
+      <Filter>ヘッダー ファイル\Engin\Light</Filter>
     </ClInclude>
     <ClInclude Include="PointLight.h">
-      <Filter>ヘッダー ファイル\Engin\3D</Filter>
+      <Filter>ヘッダー ファイル\Engin\Light</Filter>
     </ClInclude>
-    <ClInclude Include="LightGroup.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="SpotLight.h">
+      <Filter>ヘッダー ファイル\Engin\Light</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
