--- a/DirectX12CG/DirectX12CG.vcxproj
+++ b/DirectX12CG/DirectX12CG.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="DxWindow.cpp" />
     <ClCompile Include="FBXLoader.cpp" />
     <ClCompile Include="FBXModel.cpp" />
+    <ClCompile Include="FPS.cpp" />
     <ClCompile Include="GamePad.cpp" />
     <ClCompile Include="IScene.cpp" />
     <ClCompile Include="Light.cpp" />
@@ -155,6 +156,7 @@
     <ClInclude Include="DxWindow.h" />
     <ClInclude Include="FBXLoader.h" />
     <ClInclude Include="FBXModel.h" />
+    <ClInclude Include="FPS.h" />
     <ClInclude Include="GamePad.h" />
     <ClInclude Include="IScene.h" />
     <ClInclude Include="Light.h" />
