--- a/DirectX12CG/DirectX12CG.vcxproj
+++ b/DirectX12CG/DirectX12CG.vcxproj
@@ -44,6 +44,7 @@
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="ParticleMaterial.cpp" />
     <ClCompile Include="Pipeline.cpp" />
+    <ClCompile Include="PipeLineManager.cpp" />
     <ClCompile Include="PIpelineRootSignature.cpp" />
     <ClCompile Include="PointLight.cpp" />
     <ClCompile Include="Projection.cpp" />
@@ -171,6 +172,7 @@
     <ClInclude Include="Particle.h" />
     <ClInclude Include="ParticleMaterial.h" />
     <ClInclude Include="Pipeline.h" />
+    <ClInclude Include="PipeLineManager.h" />
     <ClInclude Include="PIpelineRootSignature.h" />
     <ClInclude Include="PIpelines.h" />
     <ClInclude Include="PointLight.h" />
